```feat(server): 基础框架搭建
为系统添加了基础的的RESTful API接口，支持记录的创建、读取、更新和删除操作。实现了与MySQL和Redis的集成，用于数据存储和缓存。同时引入了全局异常处理和自定义注解以增强错误处理能力和代码的清晰度。
```